# mnemonic_flow

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  ROADMAP.md
.github/workflows/: build-all.yml  ci.yml  code-style.yml  merge-to-release.sh  push-images.yml  push-to-main.sh  release.yml  test-all.yml  update-registry-cache.yml  validate-commits.yml  validate-release-version.sh  yougile-sync.yml
.pre-commit/: Dockerfile
backend/: .gitignore  Dockerfile  Dockerfile.ci  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
backend/backend/: .env  MakeListing.py  nit_db_run.py  plan.txt  populate_test_data.py  pytest.ini  seed.py  specific.txt
backend/backend/app/: main.py
backend/backend/app/api/routes/: auth.py  cards.py  comments.py  deck_editors.py  decks.py  groups.py  stats.py
backend/backend/app/auth/: dependencies.py  jwt.py
backend/backend/app/core/: config.py  email.py  enums.py  security.py  version.py
backend/backend/app/db/: init_db.py  session.py
backend/backend/app/domain/review/: dto.py  entities.py  policy.py
backend/backend/app/models/: __init__.py  card.py  card_card_tag.py  card_level.py  card_progress.py  card_review_history.py  card_tag.py  comment.py  deck.py  deck_editor.py  deck_invite_token.py  study_group.py  study_group_deck.py  user.py  user_learning_settings.py  user_study_group.py  user_study_group_deck.py
backend/backend/app/schemas/: auth.py  card_review.py  card_with_levels.py  cards.py  comment.py  decks_public.py  group.py  stats.py
backend/backend/app/services/: anki_mapper.py  anki_parser.py  deck_access.py  review_service.py  stats_service.py  storage_service.py
backend/backend/tests/: conftest.py  test_auth.py  test_card_audio.py  test_card_image.py  test_cards.py  test_cards_create.py  test_decks.py  test_groups_decks.py  test_review_scenarios.py  test_security.py  test_storage_service.py  test_study_time.py  test_user_model.py
backend/migrations/: env.py
backend/migrations/versions/: 20250128_add_audio_fields_to_card_levels.py  20250201_convert_media_to_arrays.py  20250220_show_card_title.py  20260315_add_deck_editors_and_invite_tokens.py  20260315_add_invite_type_to_tokens.py  4557cdb9e28f_add_image_fields_to_card_levels.py  753f2296fc32_add_auto_add_cards_to_study.py  cc8bab2b37cb_remove_per_card_image_fields_use_per_.py  fd1fa90e7c1e_add_image_fields_to_cards.py
docs/: WORKFLOW_TEST.md
frontend/: .dockerignore  .gitignore  .prettierignore  .prettierrc  Dockerfile  Dockerfile.ci  LICENSE  README.md  deploy.sh  deploy_win.ps1  dist.tgz  eslint.config.js  index.html  listing.ps1  make_listing.sh  package-lock.json  package.json  pwa-assets.config.ts  test.csv  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/docs/: fsd-contract.md
frontend/nginx/: default.conf
frontend/public/: manifest.json  service-worker.js
frontend/src/: CHANGELOG.md  README_PWA.md  index.html  main.tsx
frontend/src/app/: App.tsx  AppRouter.tsx
infra/: .envExample.dev  .envExample.prod  Dockerfile.pre-commit  README.md  compose.ci.yml  compose.dev.yml  compose.pre-commit.yml  compose.prod.yml
(+373 files in other folders)
