[project]
name = "mnemonicflow-backend"
version = "0.0.99"
description = "Backend for MnemonicFlow flashcard app"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic",
    "pydantic-settings",
    "python-jose",
    "passlib",
    "bcrypt",
    "email-validator",
    "alembic",
    "httpx",
    "aiosmtplib",
    "pytest",
]

[tool.pytest.ini_options]
log_cli = false
log_file_level = "ERROR"
log_level = "ERROR"
addopts = "--tb=short"
pythonpath = "backend"
testpaths = "backend/tests"
filterwarnings = [
    "ignore::DeprecationWarning:sqlalchemy.*",
]

# Black - code formatter
[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort - import sorting
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]
skip_gitignore = true

# Flake8 - linting (read from pyproject via Flake8-pyproject)
[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]  # conflicts with black
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]
max-complexity = 10

# mypy - type checking
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # TODO: enable gradually
plugins = ["pydantic.mypy"]
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
